add: 아이템 삭제 API 추가
